import uuid
from datetime import datetime
from sqlalchemy import String, Text, Enum as SAEnum, DateTime, Boolean, ForeignKey, func
from sqlalchemy.dialects.postgresql import UUID
from sqlalchemy.orm import Mapped, mapped_column, relationship
from app.database import Base


class User(Base):
    __tablename__ = "users"

    id: Mapped[uuid.UUID] = mapped_column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4)
    email: Mapped[str] = mapped_column(String(255), unique=True, nullable=False, index=True)
    password_hash: Mapped[str] = mapped_column(String(255), nullable=False)
    role: Mapped[str] = mapped_column(SAEnum("business", "admin", "employee", name="user_role"), nullable=False, default="business")
    business_name: Mapped[str | None] = mapped_column(String(255), nullable=True)
    business_description: Mapped[str | None] = mapped_column(Text, nullable=True)
    avatar_url: Mapped[str | None] = mapped_column(Text, nullable=True)
    store_address: Mapped[str | None] = mapped_column(Text, nullable=True)
    opening_hours: Mapped[str | None] = mapped_column(Text, nullable=True)
    shipping_policy: Mapped[str | None] = mapped_column(Text, nullable=True)
    warranty_policy: Mapped[str | None] = mapped_column(Text, nullable=True)
    payment_methods: Mapped[str | None] = mapped_column(Text, nullable=True)
    hotline: Mapped[str | None] = mapped_column(String(50), nullable=True)
    phone: Mapped[str | None] = mapped_column(String(20), nullable=True)
    full_name: Mapped[str | None] = mapped_column(String(255), nullable=True)
    # For employee role: the business this employee belongs to
    business_id: Mapped[uuid.UUID | None] = mapped_column(UUID(as_uuid=True), ForeignKey("users.id", ondelete="CASCADE"), nullable=True)
    is_active: Mapped[bool] = mapped_column(Boolean, nullable=False, default=True)
    created_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), server_default=func.now())
    updated_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), server_default=func.now(), onupdate=func.now())

    # Relationships
    channels = relationship("Channel", back_populates="business", cascade="all, delete-orphan")
    contacts = relationship("Contact", back_populates="business", cascade="all, delete-orphan")
    conversations = relationship("Conversation", foreign_keys="Conversation.business_id", back_populates="business", cascade="all, delete-orphan")
    products = relationship("Product", back_populates="business", cascade="all, delete-orphan")
    labels = relationship("Label", foreign_keys="Label.business_id", back_populates="business", cascade="all, delete-orphan")
    # Employees belonging to this business (only valid for business role)
    employees = relationship("User", foreign_keys=[business_id], back_populates="employer", cascade="all, delete-orphan")
    employer = relationship("User", foreign_keys=[business_id], back_populates="employees", remote_side=[id])
